<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/coffee"
        android:scaleType="centerCrop"
        android:rotationY="@integer/locale_mirror_flip"
        android:contentDescription="@string/coffee_picture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:layout_margin="20dp"
        android:text="@string/Welcome"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CoffeIsLife"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/comeVisit"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weCantWait"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>